kubernetes/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"1"},"creationTimestamp":"2024-07-26T14:26:48Z","generation":4,"labels":{"app":"synergychat-web"},"name":"synergychat-web","namespace":"default","resourceVersion":"12914","uid":"cc0b5909-4d92-401a-80d0-a2ad481db893"},"spec":{"progressDeadlineSeconds":600,"replicas":3,"revisionHistoryLimit":10,"selector":{"matchLabels":{"app":"synergychat-web"}},"strategy":{"rollingUpdate":{"maxSurge": [...]
  creationTimestamp: "2024-07-26T14:26:48Z"
  generation: 5
  labels:
    app: synergychat-web
  name: synergychat-web
  namespace: default
  resourceVersion: "13055"
  uid: cc0b5909-4d92-401a-80d0-a2ad481db893
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: synergychat-web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: synergychat-web
    spec:
      containers:
        - image: bootdotdev/synergychat-web:latest
          imagePullPolicy: Always
          name: synergychat-web
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 3
  conditions:
    - lastTransitionTime: "2024-07-26T14:26:48Z"
      lastUpdateTime: "2024-07-26T14:27:11Z"
      message: ReplicaSet "synergychat-web-6b7889c476" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2024-07-26T15:39:57Z"
      lastUpdateTime: "2024-07-26T15:39:57Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
  observedGeneration: 5
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
