kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: default
spec:
  selector:
    app: synergychat-api # Its controller will continuously scan for pods matching the app: synergychat-web label selector and automatically add them to its pool
  type: ClusterIP
  #todo NodePort type service to expose the api service to the outside world.
  ports:
    - name: api-service
      protocol: TCP
      port: 80 # it listens on port 80
      targetPort: 8080 # forwards that traffic to pods that are listening on their port 8080
      nodePort: 30080
