kubernetes/crawler-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crawler-service
  namespace: crawler
spec:
  selector:
    app: synergychat-crawler # Its controller will continuously scan for pods matching the app: synergychat-crawler label selector and automatically add them to its pool
  type: ClusterIP
  ports:
    - name: crawler-service
      protocol: TCP
      port: 80 # it listens on port 80
      targetPort: 8080 # forwards that traffic to pods that are listening on their port 8080
